# DAW_Demo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  ChangeLog  DAW_Config.txt  Makefile  Makefile.am  Makefile.in  README  config.status  config_2board_sync.txt  configure  configure.ac  oldMakefile
autom4te.cache/: output.0  requests  traces.0
inc/: DAWDemoConst.h  DAWDemoFunc.h
src/: DAWDemoFunc.c  DAW_Demo  Makefile  Makefile.am  Makefile.in  Makefile~  main.c
src/.deps/: DAWDemoFunc.Po  conio.Po  main.Po
